# RemoteCL

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
client/: CMakeLists.txt  apiutil.h  connection.cpp  connection.h  context.cpp  device.cpp  event.cpp  eventchannel.h  exports.def  icd.cpp  image.cpp  kernel.cpp  memmapping.h  memory.cpp  objects.h  platform.cpp  program.cpp  queue.cpp
common/: CMakeLists.txt  compression.cpp  compression.h  hints.h  idtype.h  packetstream.h  socket.cpp  socket.h  socketstream.cpp  socketstream.h  streamserialise.h
common/packets/: IDs.h  callbacks.h  commands.h  context.h  device.h  event.h  image.h  memory.h  packet.h  payload.h  platform.h  program.h  queue.h  refcount.h  simple.h  terminate.h  version.cpp  version.h
server/: CMakeLists.txt  context.cpp  device.cpp  event.cpp  image.cpp  instance.cpp  instance.h  main.cpp  memory.cpp  program.cpp  queue.cpp  refcount.cpp
